feat: add status support (#11)
* feat: added getTaskById api

* feat: added getTaskById support

* fix: lint error + unused enum and interfaces

* fix: convert OpertaionEnum value to TaskStatus enum values

* fix: added expired task support

* fix: added expired task support

* fix: lint error

* fix: added task percentage support

* fix: added task percentage support

* fix: added task percentage support

* fix: percentage undifined changed to 0
