# src/tasks/routes/tasksRouter.ts
@@ -8,6 +8,7 @@ const tasksRouterFactory: FactoryFunction<Router> = (dependencyContainer) => {
 
   router.post('/', controller.createExportTask);
   router.post('/webhook', controller.sendWebhook);
+  router.get('/:id', controller.getTaskById);
 
   return router;
 };
